--- a/appsettings.json
+++ b/appsettings.json
@@ -1,15 +1,18 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=cineReview.db"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CineReviewDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
-  "AppSettings": {
-    "JwtKey": "chave-super-secreta-para-jwt-cinereview"
+
+  "Jwt": {
+    "Key": "chave-super-secreta-para-jwt-cinereview"
   },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
   "AllowedHosts": "*"
 }
